Fix column gap at mobile view

--- a/client/stylesheets/blocks/_user.scss
+++ b/client/stylesheets/blocks/_user.scss
@@ -2,19 +2,37 @@
   margin-top: 4em;
 
   &-profile-box {
-    margin: 0 2em 4em;
+    margin: 0 0 4em;
+
+    @media (min-width: $width-screen-small-minimum) {
+      margin: 0 2em 4em;
+    }
+  }
+
+  &-profile-image-box {
+    text-align: right;
   }
 
   &-username {
     margin-top: 0;
+    font-size: 1.5em;
+
+    @media (min-width: $width-screen-small-minimum) {
+      font-size: 2em;
+    }
   }
 
   &-avatar {
     border-radius: 50%;
+    max-width: 100%;
   }
 
   &-posts-box {
-    margin: 0 2em;
+    margin: 0 0 4em;
+
+    @media (min-width: $width-screen-small-minimum) {
+      margin: 0 2em;
+    }
   }
 
   &-post-box {
